application-deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-app
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: quarkus-app
        image: quarkus-app:version
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
