application-deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
