application-deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkus-app
    weight: 100
